<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>xyz.xenondevs.invui</groupId>
        <artifactId>invui-parent</artifactId>
        <version>1.46</version>
    </parent>

    <artifactId>invui</artifactId>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>invui-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r1</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r2</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r3</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r4</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r5</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r6</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r7</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r8</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r9</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r10</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r11</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r12</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r13</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r14</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r15</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r16</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r17</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r18</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r19</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r20</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r21</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r22</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r23</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.xenondevs.invui</groupId>
            <artifactId>inventory-access-r24</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

</project>